tests/ui/once_create_rejected.stderr
error: `create` is not supported on `#[once]`; `#[once]` manages its own single-value storage and does not take a custom store constructor
 --> tests/ui/once_create_rejected.rs:3:8
  |
3 | #[once(create = "{ cached::UnboundCache::new() }")]
  |        ^^^^^^
